--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch
-ultralytics
-streamlit
-opencv-python-headless
-pillow
-numpy
+torch==1.10.1
+ultralytics==8.0.33
+streamlit==1.16.0
+opencv-python-headless==4.5.5.62
+pillow==8.4.0
+numpy==1.21.6
