--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ mpmath==1.3.0
 narwhals==1.16.0
 networkx==3.2.1
 numpy==2.0.2
-opencv-python-headless==4.10.0.84
+opencv-python==4.10.0.84
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
@@ -55,7 +55,7 @@ sympy==1.13.1
 tenacity==9.0.0
 thop==0.1.1.post2209072238
 toml==0.10.2
-torch==2.1.2
+torch==1.0.1
 torchvision==0.16.2
 tornado==6.4.2
 tqdm==4.67.1
