--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,68 @@
-altair==5.5.0
-attrs==24.2.0
-blinker==1.9.0
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-contourpy==1.3.0
-cycler==0.12.1
-filelock==3.16.1
-fonttools==4.55.2
-fsspec==2024.10.0
-gitdb==4.0.11
-GitPython==3.1.43
-idna==3.10
-importlib_resources==6.4.5
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.3
-mdurl==0.1.2
-mpmath==1.3.0
-narwhals==1.16.0
-networkx==3.2.1
-numpy==2.0.2
-opencv-python-headless==4.10.0.84
-packaging==24.2
-pandas==2.2.3
-pillow==11.0.0
-protobuf==5.29.1
-psutil==6.1.0
-py-cpuinfo==9.0.0
-pyarrow==18.1.0
-pydeck==0.9.1
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==6.0.2
-referencing==0.35.1
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.22.3
-scipy==1.13.1
-seaborn==0.13.2
-sentry-sdk==2.19.2
-six==1.17.0
-smmap==5.0.1
-streamlit==1.40.2
-sympy==1.13.1
-tenacity==9.0.0
-thop==0.1.1.post2209072238
-toml==0.10.2
-torch==2.1.2
-torchvision==0.16.2
-tornado==6.4.2
-tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2024.2
-ultralytics==8.0.65
-ultralytics-thop==2.0.12
-urllib3==2.2.3
-watchdog==6.0.0
-zipp==3.21.0
+altair
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+colorama
+contourpy
+cycler
+filelock
+fonttools
+fsspec
+gitdb
+GitPython
+idna
+importlib_resources
+Jinja2
+jsonschema
+jsonschema-specifications
+kiwisolver
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+mpmath
+narwhals
+networkx
+numpy
+opencv-python
+packaging
+pandas
+pillow
+protobuf
+psutil
+py-cpuinfo
+pyarrow
+pydeck
+Pygments
+pyparsing
+python-dateutil
+pytz
+PyYAML
+referencing
+requests
+rich
+rpds-py
+scipy
+seaborn
+sentry-sdk
+six
+smmap
+streamlit
+sympy
+tenacity
+thop
+toml
+torch
+torchvision
+tornado
+tqdm
+typing_extensions
+tzdata
+ultralytics
+ultralytics-thop
+urllib3
+watchdog
+zipp
